add variable in url

--- a/app/templates/home/index.html.twig
+++ b/app/templates/home/index.html.twig
@@ -3,5 +3,5 @@
 {% block title %}Hello MainController!{% endblock %}
 
 {% block body %}
-<div> Hello World from twig!</div>
+<div> Hello {{ model }} from twig!</div>
 {% endblock %}
