--- a/app/templates/home/index.html.twig
+++ b/app/templates/home/index.html.twig
@@ -3,5 +3,6 @@
 {% block title %}Hello MainController!{% endblock %}
 
 {% block body %}
-<div> Hello {{ model }} from twig!</div>
+<div> Hello {{ model.age }} from twig!</div>
+{{ dump() }}
 {% endblock %}
