--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -14,6 +14,7 @@
         {% endblock %}
     </head>
     <body>
+        {% include 'includes/_navigation.html.twig' %}
         {% block body %}{% endblock %}
     </body>
 </html>
