--- a/app/templates/home/index.html.twig
+++ b/app/templates/home/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello MainController!{% endblock %}
+{% block title %}{{ parent() }}Dashboard{% endblock %}
 
 {% block body %}
-<div> Hello {{ model.age }} from twig!</div>
+<div>Dashboard</div>
 {% endblock %}
