--- a/app/templates/includes/_navigation.html.twig
+++ b/app/templates/includes/_navigation.html.twig
@@ -2,8 +2,9 @@
 <h1>Fahrtenbuchverwaltung</h1>
 
 <ul>
-    <li>Home</li>
-    <li>Fahr Hinzufügeh</li>
+    <li><a href="{{ path('app_home_index') }}">Home</a></li>
+    <li><a href="{{ path('app_home_overview') }}">Fahrten-Übersicht</a></li>
+    <li><a href="">Fahrt Hinzufügeh</a></li>
 </ul>
 
 </nav>
