--- a/app/templates/includes/_navigation.html.twig
+++ b/app/templates/includes/_navigation.html.twig
@@ -3,8 +3,11 @@
 
 <ul>
     <li><a href="{{ path('app_home_index') }}">Home</a></li>
-    <li><a href="{{ path('app_home_overview') }}">Fahrten-Übersicht</a></li>
-    <li><a href="">Fahrt Hinzufügeh</a></li>
+    <li><a href="{{ path('app_trip_list') }}">Fahrten-Übersicht</a></li>
+    <li><a href="{{ path('app_trip_add') }}">Fahrt Hinzufügeh</a></li>
+    <li><a href="{{ path('app_car_list') }}">Auto-Übersicht</a></li>
+    <li><a href="{{ path('app_car_add') }}">Auto Hinzufügeh</a></li>
+
 </ul>
 
 </nav>
