--- a/app/templates/car/add.html.twig
+++ b/app/templates/car/add.html.twig
@@ -1,7 +1,26 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Auto Hinzufügeh{% endblock %}
+{% block title %}
+  Auto Hinzufügeh
+{% endblock %}
 
 {% block body %}
-<h2>Auto Hinzufügeh</h2>
+  <h2>
+    Auto Hinzufügeh
+  </h2>
+  <form method="post" action=" {{ path('app_car_add') }}">
+    <p>
+      <label for="description">Bezeichnung</label>
+      <input id="description" name="description" />
+    </p>
+
+    <p>
+      <label for="plate">Kernzeichnen</label>
+      <input id="plate" name="plate" />
+    </p>
+
+    <p>
+      <input type="submit" value="submit" />
+    </p>
+  </form>
 {% endblock %}
